# sample-graphql-api

./: README.md  pyproject.toml
api/: schema.graphql
api/api/: settings.py  urls.py
api/graphql_api/schema/: mutation.py  query.py  schema.py
api/posts/: admin.py  interactors.py  models.py  tests.py
api/posts/migrations/: 0001_initial.py  0002_post_published.py
api/posts/schema/: query.py
api/users/schema/: login_mutation.py  user_mutations.py  user_query.py
