[tool.poetry]
name = "sample-api"
version = "0.1.0"
description = "Sample Graphql API"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
graphene-django = "^2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
